// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolver graph layout when rendering no nodes renders right 1`] = `
Object {
  "ariaLevels": Map {},
  "edgeLineSegments": Array [],
  "processNodePositions": Map {},
}
`;

exports[`resolver graph layout when rendering one node renders right 1`] = `
Object {
  "ariaLevels": Map {
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "A",
        "process.name": "powershell.exe",
        "process.parent.entity_id": "",
      },
      "id": "A",
      "name": "powershell.exe",
      "parent": undefined,
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => 1,
  },
  "edgeLineSegments": Array [],
  "processNodePositions": Map {
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "A",
        "process.name": "powershell.exe",
        "process.parent.entity_id": "",
      },
      "id": "A",
      "name": "powershell.exe",
      "parent": undefined,
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => Array [
      0,
      -0.8164965809277259,
    ],
  },
}
`;

exports[`resolver graph layout when rendering two forks, and one fork has an extra long tine renders right 1`] = `
Object {
  "ariaLevels": Map {
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "A",
        "process.name": "lsass.exe",
        "process.parent.entity_id": "",
      },
      "id": "A",
      "name": "lsass.exe",
      "parent": undefined,
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => 1,
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "B",
        "process.name": "powershell.exe",
        "process.parent.entity_id": "A",
      },
      "id": "B",
      "name": "powershell.exe",
      "parent": "A",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => 2,
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "C",
        "process.name": "iexlorer.exe",
        "process.parent.entity_id": "A",
      },
      "id": "C",
      "name": "iexlorer.exe",
      "parent": "A",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => 2,
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "I",
        "process.name": "explorer.exe",
        "process.parent.entity_id": "A",
      },
      "id": "I",
      "name": "explorer.exe",
      "parent": "A",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => 2,
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "D",
        "process.name": "mimikatz.exe",
        "process.parent.entity_id": "B",
      },
      "id": "D",
      "name": "mimikatz.exe",
      "parent": "B",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => 3,
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "E",
        "process.name": "powershell.exe",
        "process.parent.entity_id": "B",
      },
      "id": "E",
      "name": "powershell.exe",
      "parent": "B",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => 3,
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "F",
        "process.name": "explorer.exe",
        "process.parent.entity_id": "C",
      },
      "id": "F",
      "name": "explorer.exe",
      "parent": "C",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => 3,
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "G",
        "process.name": "powershell.exe",
        "process.parent.entity_id": "C",
      },
      "id": "G",
      "name": "powershell.exe",
      "parent": "C",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => 3,
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "H",
        "process.name": "lsass.exe",
        "process.parent.entity_id": "G",
      },
      "id": "H",
      "name": "lsass.exe",
      "parent": "G",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => 4,
  },
  "edgeLineSegments": Array [
    Object {
      "metadata": Object {
        "reactKey": "parentToMidedge:A:B",
      },
      "points": Array [
        Array [
          0,
          -0.8164965809277259,
        ],
        Array [
          197.9898987322333,
          -115.12601791080935,
        ],
      ],
    },
    Object {
      "metadata": Object {
        "reactKey": "midwayedge:A:B",
      },
      "points": Array [
        Array [
          -98.99494936611666,
          -286.5902999056318,
        ],
        Array [
          593.9696961966999,
          113.49302474895391,
        ],
      ],
    },
    Object {
      "metadata": Object {
        "elapsedTime": Object {
          "duration": "<1",
          "durationType": "millisecond",
        },
        "reactKey": "edge:A:B",
      },
      "points": Array [
        Array [
          -98.99494936611666,
          -286.5902999056318,
        ],
        Array [
          98.99494936611666,
          -400.8998212355134,
        ],
      ],
    },
    Object {
      "metadata": Object {
        "elapsedTime": Object {
          "duration": "<1",
          "durationType": "millisecond",
        },
        "reactKey": "edge:A:C",
      },
      "points": Array [
        Array [
          296.98484809834997,
          -57.97125724586854,
        ],
        Array [
          494.9747468305833,
          -172.28077857575016,
        ],
      ],
    },
    Object {
      "metadata": Object {
        "elapsedTime": Object {
          "duration": "<1",
          "durationType": "millisecond",
        },
        "reactKey": "edge:A:I",
      },
      "points": Array [
        Array [
          593.9696961966999,
          113.49302474895391,
        ],
        Array [
          791.9595949289333,
          -0.8164965809277259,
        ],
      ],
    },
    Object {
      "metadata": Object {
        "reactKey": "parentToMidedge:B:D",
      },
      "points": Array [
        Array [
          98.99494936611666,
          -400.8998212355134,
        ],
        Array [
          296.98484809834997,
          -515.2093425653951,
        ],
      ],
    },
    Object {
      "metadata": Object {
        "reactKey": "midwayedge:B:D",
      },
      "points": Array [
        Array [
          197.9898987322333,
          -572.3641032303359,
        ],
        Array [
          395.9797974644666,
          -458.05458190045425,
        ],
      ],
    },
    Object {
      "metadata": Object {
        "elapsedTime": Object {
          "duration": "<1",
          "durationType": "millisecond",
        },
        "reactKey": "edge:B:D",
      },
      "points": Array [
        Array [
          197.9898987322333,
          -572.3641032303359,
        ],
        Array [
          395.9797974644666,
          -686.6736245602175,
        ],
      ],
    },
    Object {
      "metadata": Object {
        "elapsedTime": Object {
          "duration": "<1",
          "durationType": "millisecond",
        },
        "reactKey": "edge:B:E",
      },
      "points": Array [
        Array [
          395.9797974644666,
          -458.05458190045425,
        ],
        Array [
          593.9696961966999,
          -572.3641032303359,
        ],
      ],
    },
    Object {
      "metadata": Object {
        "reactKey": "parentToMidedge:C:F",
      },
      "points": Array [
        Array [
          494.9747468305833,
          -172.28077857575016,
        ],
        Array [
          692.9646455628166,
          -286.5902999056318,
        ],
      ],
    },
    Object {
      "metadata": Object {
        "reactKey": "midwayedge:C:F",
      },
      "points": Array [
        Array [
          593.9696961966999,
          -343.7450605705726,
        ],
        Array [
          791.9595949289333,
          -229.43553924069096,
        ],
      ],
    },
    Object {
      "metadata": Object {
        "elapsedTime": Object {
          "duration": "<1",
          "durationType": "millisecond",
        },
        "reactKey": "edge:C:F",
      },
      "points": Array [
        Array [
          593.9696961966999,
          -343.7450605705726,
        ],
        Array [
          791.9595949289333,
          -458.05458190045425,
        ],
      ],
    },
    Object {
      "metadata": Object {
        "elapsedTime": Object {
          "duration": "<1",
          "durationType": "millisecond",
        },
        "reactKey": "edge:C:G",
      },
      "points": Array [
        Array [
          791.9595949289333,
          -229.43553924069096,
        ],
        Array [
          989.9494936611666,
          -343.7450605705726,
        ],
      ],
    },
    Object {
      "metadata": Object {
        "elapsedTime": Object {
          "duration": "<1",
          "durationType": "millisecond",
        },
        "reactKey": "edge:G:H",
      },
      "points": Array [
        Array [
          989.9494936611666,
          -343.7450605705726,
        ],
        Array [
          1187.9393923933999,
          -458.05458190045425,
        ],
      ],
    },
  ],
  "processNodePositions": Map {
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "A",
        "process.name": "lsass.exe",
        "process.parent.entity_id": "",
      },
      "id": "A",
      "name": "lsass.exe",
      "parent": undefined,
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => Array [
      0,
      -0.8164965809277259,
    ],
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "B",
        "process.name": "powershell.exe",
        "process.parent.entity_id": "A",
      },
      "id": "B",
      "name": "powershell.exe",
      "parent": "A",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => Array [
      98.99494936611666,
      -400.8998212355134,
    ],
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "C",
        "process.name": "iexlorer.exe",
        "process.parent.entity_id": "A",
      },
      "id": "C",
      "name": "iexlorer.exe",
      "parent": "A",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => Array [
      494.9747468305833,
      -172.28077857575016,
    ],
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "I",
        "process.name": "explorer.exe",
        "process.parent.entity_id": "A",
      },
      "id": "I",
      "name": "explorer.exe",
      "parent": "A",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => Array [
      791.9595949289333,
      -0.8164965809277259,
    ],
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "D",
        "process.name": "mimikatz.exe",
        "process.parent.entity_id": "B",
      },
      "id": "D",
      "name": "mimikatz.exe",
      "parent": "B",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => Array [
      395.9797974644666,
      -686.6736245602175,
    ],
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "E",
        "process.name": "powershell.exe",
        "process.parent.entity_id": "B",
      },
      "id": "E",
      "name": "powershell.exe",
      "parent": "B",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => Array [
      593.9696961966999,
      -572.3641032303359,
    ],
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "F",
        "process.name": "explorer.exe",
        "process.parent.entity_id": "C",
      },
      "id": "F",
      "name": "explorer.exe",
      "parent": "C",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => Array [
      791.9595949289333,
      -458.05458190045425,
    ],
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "G",
        "process.name": "powershell.exe",
        "process.parent.entity_id": "C",
      },
      "id": "G",
      "name": "powershell.exe",
      "parent": "C",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => Array [
      989.9494936611666,
      -343.7450605705726,
    ],
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "H",
        "process.name": "lsass.exe",
        "process.parent.entity_id": "G",
      },
      "id": "H",
      "name": "lsass.exe",
      "parent": "G",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => Array [
      1187.9393923933999,
      -458.05458190045425,
    ],
  },
}
`;

exports[`resolver graph layout when rendering two nodes, one being the parent of the other renders right 1`] = `
Object {
  "ariaLevels": Map {
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "A",
        "process.name": "explorer.exe",
        "process.parent.entity_id": "",
      },
      "id": "A",
      "name": "explorer.exe",
      "parent": undefined,
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => 1,
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "B",
        "process.name": "iexlorer.exe",
        "process.parent.entity_id": "A",
      },
      "id": "B",
      "name": "iexlorer.exe",
      "parent": "A",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => 2,
  },
  "edgeLineSegments": Array [
    Object {
      "metadata": Object {
        "elapsedTime": Object {
          "duration": "<1",
          "durationType": "millisecond",
        },
        "reactKey": "edge:A:B",
      },
      "points": Array [
        Array [
          0,
          -0.8164965809277259,
        ],
        Array [
          197.9898987322333,
          -115.12601791080935,
        ],
      ],
    },
  ],
  "processNodePositions": Map {
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "A",
        "process.name": "explorer.exe",
        "process.parent.entity_id": "",
      },
      "id": "A",
      "name": "explorer.exe",
      "parent": undefined,
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => Array [
      0,
      -0.8164965809277259,
    ],
    Object {
      "data": Object {
        "@timestamp": 1606234833273,
        "process.entity_id": "B",
        "process.name": "iexlorer.exe",
        "process.parent.entity_id": "A",
      },
      "id": "B",
      "name": "iexlorer.exe",
      "parent": "A",
      "stats": Object {
        "byCategory": Object {},
        "total": 0,
      },
    } => Array [
      197.9898987322333,
      -115.12601791080935,
    ],
  },
}
`;
